--- a/index.html
+++ b/index.html
@@ -7,27 +7,27 @@
 </head>
 <body>
 
-    <div style="background-color:gray;color:blue" class="display">0</div>
+    <div style="background-color:gray;color:blue" class="display"></div>
 
     <div class="numberpad">
-        <button>0</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
+        <button class="number">0</button>
+        <button class="number">1</button>
+        <button class="number">2</button>
+        <button class="number">3</button>
+        <button class="number">4</button>
+        <button class="number">5</button>
+        <button class="number">6</button>
+        <button class="number">7</button>
+        <button class="number">8</button>
+        <button class="number">9</button>
     </div>
     <div class="operators">
-        <button>+</button>
-        <button>-</button>
-        <button>x</button>
-        <button>÷</button>
-        <button>=</button>
-        <button>C</button>
+        <button class="operator add">+</button>
+        <button class="operator sub">-</button>
+        <button class="operator times">x</button>
+        <button class="operator divide">÷</button>
+        <button class="equal">=</button>
+        <button class="clear">C</button>
     </div>
        
 
