--- a/index.html
+++ b/index.html
@@ -4,31 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>myCalculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <div style="background-color:gray;color:blue" class="display"></div>
+    <div class="calculator">
+        <div class="display">0</div>
 
-    <div class="numberpad">
-        <button class="number">0</button>
-        <button class="number">1</button>
-        <button class="number">2</button>
-        <button class="number">3</button>
-        <button class="number">4</button>
-        <button class="number">5</button>
-        <button class="number">6</button>
-        <button class="number">7</button>
-        <button class="number">8</button>
-        <button class="number">9</button>
-    </div>
-    <div class="operators">
-        <button class="operator add">+</button>
-        <button class="operator sub">-</button>
-        <button class="operator times">x</button>
-        <button class="operator divide">÷</button>
-        <button class="equal">=</button>
-        <button class="clear">C</button>
-    </div>
+        <div class="numberpad">
+            <button class="number">0</button>
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
+        </div>
+        <div class="operators">
+            <button class="operator add">+</button>
+            <button class="operator sub">-</button>
+            <button class="operator times">x</button>
+            <button class="operator divide">÷</button>
+            <button class="equal">=</button>
+            <button class="clear">C</button>
+        </div>
+    </div>    
        
 
     <script src="script.js"></script>
